# VersatilGameProject100

./: CMakeLists.txt  main.cpp
Headers/: AbandonedEvent.h  AsteroidEvent.h  DamagingEvents.h  Events.h  FastShip.h  GeneralFunctions.h  NormalShip.h  PiratesEvent.h  Ships.h  StrongShip.h
Sources/: AbandonedEvent.cpp  AsteroidEvent.cpp  DamagingEvents.cpp  Events.cpp  GeneralFunctions.cpp  PiratesEvent.cpp  Ships.cpp
